<resources>
    <string name="app_name">IMC 2.0</string>
    <string name="calculate">Calculate</string>
    <string name="bmi">BMI</string>
    <string name="login">Login</string>
    <string name="your_email">Your e-mail</string>
    <string name="your_pass">Your password</string>
    <string name="new_user">Sign up</string>
    <string name="logo_name">SENAI</string>
    <string name="name_label">Name</string>
    <string name="email_label">E-mail</string>
    <string name="pass_label">Password</string>
    <string name="weight_label">Weight</string>
    <string name="height_label">Height</string>
    <string name="register_user">Register user</string>
    <string name="name_user">UserName</string>
    <string name="calculator_label">Shall we calculate your body mass index now?</string>
    <string name="result_text">This is your BMI result</string>
    <string name="under_weight">Under weight</string>
    <string name="ideal_weight">Ideal weight</string>
    <string name="light_overheight">slightly overweight</string>
    <string name="obesity_one">Grade I obesity</string>
    <string name="obesity_two">Grade II (severe) obesity.</string>
    <string name="obesity_three">Obesity III (morbid).</string>
</resources>